
2.2.0

  General
    
    * Upgraded from Class::MethodMaker to Moose.
    
    * New version number scheme.
    
    * Many bug fixes, improvements, and style changes.

    * Changed from Subversion to Git.    

  Backwards-Compatiblity:
  
    * New required module: Moose.
    
    * Minor internal API changes:
      - $rate_request->packages() returns arrayref of Package objects.


2.05 Limited beta release  


  Upgrade Notes
  
    * Clear the cache (typically /tmp/FileCache).

  USPS_Online
  
    * Change to protocol V3, with backwards-compatibility for version-2 
      responses. 
    
    * Document new International sevice names:
        Global Express Guaranteed
        Express Mail International (EMS)
        Express Mail International (EMS) Flat Rate Envelope
        Priority Mail International
        Priority Mail International Flat Rate Box
        Priority Mail International Flat Rate Envelope
        First Class Mail International
        	
    * Perl style changes
    
    * Improve error reporting in tests. Disable protocol V2 tests now that V3
      is in use. Update the letter service test.
      
    * Fix several occurences of: Use of uninitialized value in concatenation (.)
      or string at .../lib/site_perl/5.8.8/XML/DOM.pm line 483. There are 
      several more that need to be fixed.
      
  UPS_Online
  
    * Disable a few tests until they can be fixed.
    
  Interchange UserTag
  
    * New feature to display all shipping options with prices at once.
      - Templatable for <select> list or any other design.
      - Store prices in $Session->{shipping}{$nickname} (where nickname is, 
        for example, UPS_GNDRES, UPS_1DA, USPS_PRIORITY, USPS_EXPRESS, etc.). 
      - Tests for the new feature.
    
    * Refactor error handling and other components.


2.04  Limited beta release


  USPS_Online and UPS_Online changes by Rusty Conover <rconover@infogears.com>:

    * Rename tracking modules so they match the path, 